// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate aide-déclaration-indépendant: ACRE 1`] = `"[9020,50000,36345,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 2`] = `"[913,15000,12630,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 3`] = `"[300,5000,4152,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 4`] = `"[1487,10000,7511,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 5`] = `"[606,10000,8392,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: IJSS (indemnité sécurité sociale) 1`] = `"[11409,50000,34048,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: RSA 1`] = `"[82,500,279,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: RSA 2`] = `"[1021,5000,3431,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 1`] = `"[9021,50000,37539,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 2`] = `"[0,5000,4881,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 3`] = `"[33,15000,14803,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 4`] = `"[7546,35000,24814,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 1`] = `"[14093,50000,31238,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 2`] = `"[13578,50000,31753,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 3`] = `"[11461,50000,33870,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 4`] = `"[14098,50000,31253,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 5`] = `"[11461,50000,33870,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: débit de tabac 1`] = `"[5652,50000,39713,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: international 1`] = `"[14610,50000,35287,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: international 2`] = `"[11875,50000,36215,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 1`] = `"[11365,50000,33986,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 2`] = `"[1368,5000,3069,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 3`] = `"[11369,50000,33996,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 4`] = `"[1369,5000,3083,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 5`] = `"[11369,50000,33996,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 6`] = `"[1369,5000,3083,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 7`] = `"[9454,50000,35911,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 1`] = `
"[1042,500,-681,0,1,1,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 2`] = `
"[1042,1000,-226,0,1,1,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 3`] = `"[1067,1500,203,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 4`] = `"[1110,2000,614,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 5`] = `"[1369,5000,3083,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 6`] = `"[2204,10000,6794,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 7`] = `
"[20929,100000,69895,0,1,1,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 8`] = `
"[106448,1000000,802634,0,1,1,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-artiste-auteur: bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur: bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur: bnc 3`] = `
"[931]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur: salarié 1`] = `
"[160]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur: salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur: salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 1`] = `
"[21394,116,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 2`] = `
"[22152,179,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 3`] = `
"[34449,371,30000,0,30000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 4`] = `
"[45267,439,40000,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 1`] = `"[20000,292,16499,0,16499]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 2`] = `"[20000,317,16193,0,16193]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 3`] = `"[20000,297,16438,0,16438]"`;

exports[`calculate simulations-auto-entrepreneur: aides 1`] = `
"[5538,45,5000,0,5000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: aides 2`] = `
"[55380,448,50000,176,49824]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: impôt sur le revenu 1`] = `"[32092,591,25000,706,24294]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 1`] = `"[574,6,500,0,500]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 2`] = `"[1148,12,1000,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 3`] = `"[2296,25,2000,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 4`] = `"[5742,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 5`] = `"[11483,124,10000,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 6`] = `"[22966,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 7`] = `"[57415,618,50000,270,49730]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 8`] = `"[80381,865,70000,1334,68666]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 9`] = `
"[114830,1236,100000,3996,96004]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 10`] = `
"[1148303,12359,1000000,131938,868062]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification, entreprise . imposition . IR . micro-fiscal . alerte seuil dépassés"
`;

exports[`calculate simulations-impot-société: bénéfices 1`] = `
"[0,0]
Notifications affichées : entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-impot-société: bénéfices 2`] = `"[0,0]"`;

exports[`calculate simulations-impot-société: bénéfices 3`] = `"[300,0]"`;

exports[`calculate simulations-impot-société: bénéfices 4`] = `"[3000,0]"`;

exports[`calculate simulations-impot-société: bénéfices 5`] = `"[51044,0]"`;

exports[`calculate simulations-impot-société: bénéfices 6`] = `
"[555044,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-impot-société: bénéfices 7`] = `
"[5595044,159457]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-impot-société: prorata temporis 1`] = `
"[275044,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-impot-société: prorata temporis 2`] = `
"[277936,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-impot-société: prorata temporis 3`] = `
"[272981,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: acre 1`] = `"[73023,23023,50000,51980,9600,40400,0,73023,3559]"`;

exports[`calculate simulations-indépendant: activité 1`] = `"[29086,9086,20000,20787,931,19069,0,29086,3559]"`;

exports[`calculate simulations-indépendant: activité 2`] = `"[29102,9102,20000,20787,931,19069,0,29102,3575]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 1`] = `"[77179,27179,50000,52092,9633,40367,0,77179,7308]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 2`] = `"[78241,28241,50000,52121,9642,40358,0,78241,4487]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 3`] = `"[80761,30761,50000,52189,9663,40337,0,80761,4811]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 4`] = `"[75298,25298,50000,52041,9618,40382,0,75298,3809]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 5`] = `"[75297,25297,50000,52041,9618,40382,0,75297,3951]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 6`] = `
"[652233,152233,500000,517707,220771,279229,0,652233,4487]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: cotisations facultatives 1`] = `"[30000,13181,16819,17881,467,16352,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 2`] = `"[30000,14381,15619,17881,467,15152,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 3`] = `"[30000,10381,19619,20431,874,18745,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 4`] = `"[20000,6732,13268,13809,0,13268,0,20000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 5`] = `
"[300000,79622,220378,228521,82429,137949,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: cotisations facultatives 6`] = `
"[300000,83122,216878,225021,80854,136024,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: cotisations minimales 1`] = `"[1375,1275,100,135,0,100,0,1375,3559]"`;

exports[`calculate simulations-indépendant: cotisations minimales 2`] = `"[244,144,100,104,0,100,0,244,3211]"`;

exports[`calculate simulations-indépendant: imposition à l'IS 1`] = `
"[100000,30105,69895,72609,15123,54772,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: imposition à l'IS 2`] = `
"[100000,30105,69895,72609,15123,54772,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: impôt sur le revenu 1`] = `"[29086,9086,20000,20787,603,19397,0,29086,3559]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 2`] = `"[73023,23023,50000,51980,8213,41787,0,73023,3559]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 3`] = `"[29086,9086,20000,20787,2079,17921,0,29086,3559]"`;

exports[`calculate simulations-indépendant: inversions 1`] = `"[2000,1386,614,666,0,614,0,2000,3559]"`;

exports[`calculate simulations-indépendant: inversions 2`] = `"[50000,16004,33996,35351,4611,29385,0,50000,3559]"`;

exports[`calculate simulations-indépendant: inversions 3`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant: inversions 4`] = `"[72181,22762,49419,51376,9419,40000,0,72181,3559]"`;

exports[`calculate simulations-indépendant: inversions 5`] = `"[14597,4597,10000,10394,0,10000,1000,15597,3559]"`;

exports[`calculate simulations-indépendant: inversions 6`] = `"[19000,5929,13071,13584,0,13071,1000,20000,3559]"`;

exports[`calculate simulations-indépendant: inversions 7`] = `"[18000,5627,12373,12860,0,12373,2000,20000,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 1`] = `"[1861,1361,500,548,0,500,0,1861,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 2`] = `"[2466,1466,1000,1064,0,1000,0,2466,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 3`] = `"[3075,1575,1500,1581,0,1500,0,3075,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 4`] = `"[3683,1683,2000,2097,0,2000,0,3683,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 5`] = `"[7428,2428,5000,5199,0,5000,0,7428,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 6`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 7`] = `
"[139593,39593,100000,103788,28472,71528,0,139593,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: échelle de revenus 8`] = `
"[1239954,239954,1000000,1033666,473591,526409,0,1239954,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: CIPAV 1`] = `"[3147,0,2647,500,0,500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 2`] = `"[3708,0,2708,1000,0,1000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 3`] = `"[4267,0,2767,1500,0,1500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 4`] = `"[4827,0,2827,2000,0,2000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 5`] = `"[8245,0,3245,5000,0,5000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 6`] = `"[14422,0,4422,10000,0,10000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 7`] = `
"[146241,0,46241,100000,28546,71454]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: CIPAV 8`] = `
"[1238004,0,238004,1000000,473565,526435]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 1`] = `"[30000,0,7733,22267,1297,20970]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 2`] = `"[30000,0,8058,21942,1245,20697]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 3`] = `"[300000,0,61611,238389,90534,147855]"`;

exports[`calculate simulations-professions-libérales: avocat 1`] = `
"[50000,0,11181,38819,6058,32761]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: avocat 2`] = `
"[50000,0,11821,38179,5866,32313]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: expert-comptable 1`] = `"[20000,0,5076,14924,81,14843]"`;

exports[`calculate simulations-professions-libérales: expert-comptable 2`] = `
"[50000,0,14877,35123,4949,30174]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: médecin 1`] = `"[50000,0,10817,39183,6167,33016]"`;

exports[`calculate simulations-professions-libérales: médecin 2`] = `"[50000,0,17650,32350,4117,28233]"`;

exports[`calculate simulations-professions-libérales: médecin 3`] = `"[300000,0,73630,226370,85125,141245]"`;

exports[`calculate simulations-professions-libérales: médecin 4`] = `"[400000,0,93706,306294,124328,181966]"`;

exports[`calculate simulations-professions-libérales: médecin 5`] = `
"[120000,0,26977,93023,25393,67630]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: médecin 6`] = `"[50000,0,10663,39337,6213,33124]"`;

exports[`calculate simulations-professions-libérales: sage-femme 1`] = `"[50000,0,12354,37646,5706,31940]"`;

exports[`calculate simulations-professions-libérales: sage-femme 2`] = `
"[20000,0,5136,14864,71,14793]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 3`] = `
"[4000,0,1267,2733,0,2733]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales: sage-femme 4`] = `
"[20000,0,5136,14864,71,14793]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 5`] = `
"[20000,0,5213,14787,59,14728]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 6`] = `
"[20000,0,5289,14711,47,14664]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 1`] = `
"[606,7272,0,7127,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 2`] = `
"[1249,14993,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 3`] = `
"[1893,22714,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 1`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 2`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 3`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 4`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 5`] = `"[14490,173883,0,150669,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 6`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 7`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 1`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 2`] = `"[917,10998,0,null,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 3`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 4`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 5`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 1`] = `"[442,5299,0,5261,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 2`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 1`] = `"[-30,-361,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 2`] = `"[14,170,0,136,0,1]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 3`] = `"[62,740,0,314,0,2]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 4`] = `"[204,2450,0,2566,2,5]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 5`] = `"[442,5299,0,5261,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 6`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 7`] = `"[2341,28096,0,26822,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 8`] = `"[4758,57101,0,51817,4,46]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 1`] = `
"[0,9349,9349,1450,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 2`] = `
"[0,18697,18697,2900,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 3`] = `
"[0,26126,26126,4350,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 1`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 2`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 3`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 4`] = `"[0,18288,18288,3045,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 5`] = `
"[0,274318,274318,20568,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification, entreprise . imposition . IR . micro-fiscal . alerte seuil dépassés"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 6`] = `"[0,17852,17852,2973,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 7`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 1`] = `"[0,15580,15580,6600,4,18]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 2`] = `"[0,15560,15560,null,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 3`] = `"[0,17336,17336,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 4`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 5`] = `"[0,15580,15580,5000,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 1`] = `"[0,10450,10450,1740,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 2`] = `"[0,30480,30480,5075,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 1`] = `"[0,87,87,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 2`] = `"[0,871,871,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 3`] = `"[0,1742,1742,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 4`] = `"[0,4354,4354,725,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 5`] = `"[0,8709,8709,1450,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 6`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 7`] = `"[0,43543,43543,7250,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 8`] = `
"[0,87085,87085,14500,4,40]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 1`] = `"[0,8392,0,6077,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 2`] = `"[0,16871,0,12220,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 3`] = `"[0,22330,0,16241,4,32]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 1`] = `"[0,16819,0,13265,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 2`] = `"[0,15619,0,13265,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 3`] = `"[0,19619,0,14540,4,28]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 4`] = `"[0,13268,0,9793,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 5`] = `
"[0,220378,0,57407,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 6`] = `"[0,13168,0,9743,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 7`] = `"[0,6868,0,7736,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 1`] = `"[0,13768,0,10043,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 2`] = `"[0,14515,0,null,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 3`] = `"[0,13758,0,10035,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 4`] = `"[0,13768,0,10043,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 5`] = `"[0,13768,0,10043,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 1`] = `"[0,6794,0,4956,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 2`] = `"[0,13768,0,10043,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 1`] = `
"[0,-1045,0,0,3,21]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 2`] = `
"[0,-226,0,0,3,21]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 3`] = `"[0,614,0,468,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 4`] = `"[0,3083,0,2257,3,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 5`] = `"[0,6794,0,4956,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 6`] = `"[0,13768,0,10043,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 7`] = `"[0,33996,0,24810,4,48]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 8`] = `
"[0,69895,0,36204,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-salarié: CCN HCR 1`] = `
"[3546,0,2500,2005,1894]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 1`] = `
"[3966,0,2500,1987,1878]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 2`] = `
"[3942,0,2500,1972,1864]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 3`] = `
"[3997,0,2500,1979,1867]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN compta 1`] = `
"[3470,0,2500,2006,1898]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN optique 1`] = `
"[3591,0,2500,2068,1953]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN spectacle vivant 1`] = `
"[3913,0,2500,1938,1856]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN sport 1`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: JEI 1`] = `"[3441,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: JEI 2`] = `
"[26625,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: JEI 3`] = `"[4518,0,4000,3141,2745]"`;

exports[`calculate simulations-salarié: activité partielle 1`] = `"[27,0,1560,1209,1209]"`;

exports[`calculate simulations-salarié: activité partielle 2`] = `"[747,0,4000,2594,2392]"`;

exports[`calculate simulations-salarié: activité partielle 3`] = `"[1989,0,8000,5209,4245]"`;

exports[`calculate simulations-salarié: activité partielle 4`] = `"[1428,0,4000,2704,2426]"`;

exports[`calculate simulations-salarié: activité partielle 5`] = `"[2830,0,4000,2870,2574]"`;

exports[`calculate simulations-salarié: activité partielle 6`] = `"[567,3750,3000,1940,1833]"`;

exports[`calculate simulations-salarié: activité partielle 7`] = `"[747,0,4000,2594,2485]"`;

exports[`calculate simulations-salarié: activité partielle 8`] = `"[397,0,2000,1555,1522]"`;

exports[`calculate simulations-salarié: activité partielle 9`] = `"[1241,0,2000,1555,1521]"`;

exports[`calculate simulations-salarié: activité partielle 10`] = `"[1407,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié: activité partielle 11`] = `"[3213,0,9000,6237,4945]"`;

exports[`calculate simulations-salarié: aides 1`] = `"[2303,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 2`] = `
"[12825,0,10000,8911,7620]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié: aides 3`] = `"[2050,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 4`] = `
"[2657,0,2000,1720,1656]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: aides 5`] = `"[1883,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 6`] = `"[2133,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides embauche covid 1`] = `
"[1237,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 2`] = `"[7086,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: aides embauche covid 3`] = `
"[1490,0,1500,1284,1284]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 4`] = `
"[886,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 1`] = `
"[1552,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 2`] = `
"[1386,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: assimilé salarié 1`] = `"[7016,0,5000,3943,3286]"`;

exports[`calculate simulations-salarié: assimilé salarié 2`] = `"[2128,0,1500,1163,1163]"`;

exports[`calculate simulations-salarié: assimilé salarié 3`] = `"[4229,0,3000,2348,2161]"`;

exports[`calculate simulations-salarié: atmp 1`] = `"[2521,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: avantages 1`] = `"[2655,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié: avantages 2`] = `"[2665,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié: avantages 3`] = `"[2574,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié: cadre 1`] = `"[4123,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié: cdd 1`] = `
"[3282,0,2200,1894,1815]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 2`] = `
"[3115,0,2200,1824,1746]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 3`] = `
"[3377,0,2200,1997,1918]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 4`] = `
"[4111,0,2200,2387,2262]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 5`] = `
"[3382,0,2200,1746,1695]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: contrat pro 1`] = `"[904,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: contrat pro 2`] = `"[1571,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: effectif 1`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 2`] = `"[2513,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 3`] = `"[2527,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 4`] = `"[2527,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 1`] = `"[2196,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié: frais pro - DFS 2`] = `"[2318,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié: frais pro - DFS 3`] = `"[2248,0,2000,1606,1558]"`;

exports[`calculate simulations-salarié: frais pro - DFS 4`] = `"[2232,0,2000,1612,1563]"`;

exports[`calculate simulations-salarié: frais pro - DFS 5`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 6`] = `"[1768,0,1700,1363,1363]"`;

exports[`calculate simulations-salarié: frais pro - DFS 7`] = `"[3287,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 1`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 2`] = `"[5019,0,3200,2916,2619]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 3`] = `"[4694,0,3200,2836,2637]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 1`] = `"[4387,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 2`] = `"[5097,0,3200,3261,3064]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 3`] = `"[4387,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 4`] = `"[4363,0,3200,2527,2330]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 1`] = `"[2506,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 2`] = `"[4308,0,3000,2134,1944]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 3`] = `"[2550,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 1`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 2`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 3`] = `"[5014,0,3200,2913,2617]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 4`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 5`] = `"[4397,0,3200,2548,2349]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 6`] = `"[4125,0,3200,2583,2381]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 1`] = `"[2570,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 2`] = `"[2529,0,2000,1606,1572]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 3`] = `"[2641,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 4`] = `
"[2567,0,2000,1632,1598]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 5`] = `
"[2533,0,2000,1606,1572]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 6`] = `
"[2517,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 7`] = `
"[3337,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 8`] = `
"[3286,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 1`] = `"[4077,0,3000,2353,2330]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 2`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 3`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 4`] = `"[4077,0,3000,2353,1907]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 5`] = `"[4077,0,3000,2353,2217]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 6`] = `"[12892,0,9000,7156,6036]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 7`] = `"[12892,0,9000,7156,6327]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 8`] = `"[12892,0,9000,7156,6852]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 9`] = `"[4077,0,3000,2353,2170]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 10`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 1`] = `"[4077,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 2`] = `
"[41840,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 3`] = `
"[4515,0,3000,2590,2392]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 4`] = `"[3882,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 5`] = `
"[41840,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 6`] = `"[4257,0,3000,2626,2485]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 7`] = `
"[41840,0,30000,26966,16655]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 8`] = `"[4077,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié: inversions 1`] = `"[2000,0,1753,1365,1358]"`;

exports[`calculate simulations-salarié: inversions 2`] = `"[3475,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié: inversions 3`] = `"[3675,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié: lodeom 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom 3`] = `"[3882,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom 4`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 3`] = `"[3422,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 4`] = `"[5567,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 3`] = `"[3227,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 4`] = `"[4887,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: stage 1`] = `
"[507,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié: stage 2`] = `
"[2491,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 1`] = `
"[1606,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 2`] = `"[3423,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 3`] = `
"[1593,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 4`] = `"[3382,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié: temps partiel 1`] = `"[2580,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié: temps partiel 2`] = `"[2534,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié: temps partiel 3`] = `
"[1152,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié: treizième mois 1`] = `"[3390,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié: treizième mois 2`] = `"[3801,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié: treizième mois 3`] = `"[3032,0,2300,1799,1733]"`;

exports[`calculate simulations-salarié: échelle de salaires 1`] = `
"[130,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 2`] = `
"[284,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 3`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 4`] = `
"[799,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 5`] = `
"[1056,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 6`] = `
"[1313,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 7`] = `
"[1571,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 8`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: échelle de salaires 9`] = `"[3402,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié: échelle de salaires 10`] = `"[4077,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: échelle de salaires 11`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: échelle de salaires 12`] = `"[7086,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: échelle de salaires 13`] = `
"[14321,0,10000,7958,5975]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 14`] = `
"[28349,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 15`] = `
"[128595,0,100000,87157,48426]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 16`] = `
"[1244019,0,1000000,896257,498390]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
